# edgedns

./: Cargo.toml
src/: cache.rs  client_queries_handler.rs  client_query.rs  dns.rs  ext_response.rs  main.rs  resolver.rs  udp_listener.rs  udp_stream.rs  upstream_probe.rs  upstream_server.rs
