[package]
name = "edgedns"
version = "0.2.2"
authors = ["Frank Denis <github@pureftpd.org>"]

[features]
webservice = ["hyper"]
nightly = ["clap/nightly", "hyper/nightly", "log/nightly", "prometheus/nightly", "coarsetime/nightly"]

default = ["nightly", "webservice"]

[dependencies]
base64 = "*"
bpf = "*"
byteorder = "*"
bytes = "*"
clap = "*"
clippy = {version = "*", optional = true}
clockpro-cache = "*"
coarsetime = "*"
dnstap = "*"
env_logger = "*"
futures = "*"
hyper = {version = "*", optional = true, default-features = false}
jumphash = "*"
log = "*"
net2 = "*"
nix = "~0.8 "
privdrop = "*"
prometheus = {version = "*", default-features = false}
rand = "*"
siphasher = "*"
slab = "*"
socket-priority = "*"
tokio-core = "*"
tokio-io = "*"
tokio-proto = "*"
tokio-service = "*"
tokio-timer = "*"
toml = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
